feat(sdk): 拆分标签与元数据模块

--- a/docs/dify-sdk/快速开始.md
+++ b/docs/dify-sdk/快速开始.md
@@ -65,7 +65,8 @@ finally:
 | `datasets`  | 数据集管理（CRUD、检索）                   | `client.datasets`  |
 | `documents` | 文档管理（文本/文件上传、更新、删除）      | `client.documents` |
 | `segments`  | 文档块管理（创建、更新、删除、查询、子块） | `client.segments`  |
-| `tags`      | 知识库标签和元数据管理                     | `client.tags`      |
+| `tags`      | 知识库标签管理                             | `client.tags`      |
+| `metadata`  | 元数据管理                                 | `client.metadata`  |
 | `models`    | 嵌入模型列表                               | `client.models`    |
 
 ## 快速示例
@@ -90,6 +91,9 @@ with DifyDatasetClient(api_key="your-api-key") as client:
     # 创建标签
     tag = client.tags.create(name="重要")
     client.tags.bind_to_dataset(dataset.id, tag_ids=[tag.id])
+
+    # 获取元数据字段
+    fields = client.metadata.list(dataset.id)
 
     # 获取可用的嵌入模型
     models = client.models.list_embedding_models()
